fixed responsive problem with navbar; fixed responsive dropdown alignment

--- a/assets/styles/overrides.css
+++ b/assets/styles/overrides.css
@@ -43,10 +43,6 @@ h3, h4, h5 {
 	position: inherit;
 }
 
-.header .main-nav .nav .nav-item a {
-	text-align: right;
-}
-
 /***** PROMO SECTION *****/
 
 .promo .intro {
